fix: profileInfo 관련 중복 커밋 정리 및 삭제 반영
fix : profileInfo 삭제