@@ -11,7 +11,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +23,7 @@ public class AdminService {
     public List<UserResponseDTO> getAllUsers() {
         return userRepository.findAll().stream()
                 .map(this::convertToResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 특정 사용자 조회
@@ -37,7 +36,7 @@ public class AdminService {
     public List<UserResponseDTO> getActiveUsers() {
         return userRepository.findByIsActiveTrue().stream()
                 .map(this::convertToResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
@@ -50,7 +49,7 @@ public class AdminService {
             try {
                 role = User.Role.valueOf(dto.getRole().toUpperCase()); // 문자열 → enum
             } catch (IllegalArgumentException e) {
-                throw new RuntimeException("유효하지 않은 역할(role) 값입니다: " + dto.getRole());
+                throw new InvalidRoleException(dto.getRole());
             }
         }
 
@@ -59,13 +58,17 @@ public class AdminService {
                 .email(dto.getEmail())
                 .password(hashedPassword)
                 .name(dto.getName())
-                .profileInfo("") // 또는 null
                 .role(role)
                 .isActive(true)
                 .joinDate(LocalDateTime.now())
                 .build();
 
         return convertToResponseDTO(userRepository.save(user));
+    }
+    public class InvalidRoleException extends RuntimeException {
+        public InvalidRoleException(String role) {
+            super("유효하지 않은 역할(role) 값입니다: " + role);
+        }
     }
 
 
@@ -79,7 +82,7 @@ public class AdminService {
     // 사용자 복구
     public boolean activateUser(String userId) {
         Optional<User> user = userRepository.findByUserId(userId);
-        if (user.isPresent() && !user.get().getIsActive()) {
+        if (user.isPresent() && Boolean.TRUE.equals(user.get().getIsActive())) {
             user.get().setIsActive(true);
             userRepository.save(user.get());
             return true;
@@ -95,7 +98,6 @@ public class AdminService {
                 .email(user.getEmail())
                 .name(user.getName())
                 .role(user.getRole().name())
-                .profileInfo(user.getProfileInfo())
                 .isActive(user.getIsActive())
                 .joinDate(user.getJoinDate())
                 .build();
